--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -120,7 +120,7 @@
                                     <div class="extra content">
                                         <br>
                                         <strong>
-                                            <a href="#">UNCONFIRMED ARRIVALS</a>
+                                            <a href="{% url 'unitmanagement:k9_mia_list'%}">UNCONFIRMED ARRIVALS</a>
                                         </strong>
                                     </div>
                                 </div>
