--- a/unitmanagement/templates/unitmanagement/trained_list.html
+++ b/unitmanagement/templates/unitmanagement/trained_list.html
@@ -14,7 +14,9 @@
     {% endif %}
 
 </div>
-
+    <div class="ui blue message">
+  <p>Select a K9 to decide if they are for breeding or for deployment.</p>
+</div>
 <button class="ui teal button" id="btn">K9's Summmary</button>
 
     <div class="ui segment" id="summary" style="display: none;">
