fixed dog request report

--- a/planningandacquiring/templates/planningandacquiring/dog_request_report.html
+++ b/planningandacquiring/templates/planningandacquiring/dog_request_report.html
@@ -37,9 +37,9 @@
                 <td>{{data.0}}</td>
                 <td>{{data.1}}</td>
                 <td>{{data.2}}</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>{{data.3}}</td>
+                <td>{{data.4}}</td>
+                <td>{{data.5}}</td>
             </tr>
             {% endfor %}
         </tbody>
